# fermybot3000

./: .gitignore  Cargo.toml  README.md  spin.toml
src/: lib.rs  slack.rs
