[package]
name = "fermybot3000"
authors = ["Lann Martin <lann.martin@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v0.5.0" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }

[workspace]